--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ firebase-debug.*.log*
 
 # Firebase cache
 .firebase/
-
+boardinghub-firebase-adminsdk-agq64-f47a2152e7.json
 # Firebase config
 
 # Uncomment this if you'd like others to create their own Firebase project.
